k8s/database.yaml
# Third
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: db
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: db
    spec:
      containers:
        - envFrom:
          - configMapRef:
              name: env
          image: postgres:13.1-alpine
          imagePullPolicy: ""
          name: db
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-storage
              subPath: postgres
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: quran-words-db-volume-claim
status: {}
