k8s/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: django
  name: django-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: django
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: django
    spec:
      containers:
      - name: django
        command:
        - /app/entrypoint.sh
        args:
        - gunicorn
        - config.wsgi
        - -b
        - 0.0.0.0:8000
        - --workers
        - "3"
        - --timeout
        - "600"
        image: localhost:32000/quran-words-django:latest
        imagePullPolicy: ""
        ports:
        - containerPort: 8000
        resources: {}
        volumeMounts:
          - mountPath: /app/media
            name: quran-words-media-storage
            subPath: media
          - mountPath: /app/collected_static
            name: quran-words-media-storage
            subPath: static
      restartPolicy: Always
      volumes:
        - name: quran-words-media-storage
          persistentVolumeClaim:
            claimName: quran-words-app-volume-claim
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: django
  name: django
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    io.kompose.service: django
status:
  loadBalancer: {}
